--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     font-size: 16px;
     color: #D8DBE2;
     margin: 0;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 @media only screen and (max-width: 310px) {
